# gbrl

./: .gitignore  CLA.md  CMakeLists.txt  LICENSE  LICENSES.txt  Licenses.md  MANIFEST.in  README.md  examples.html  gbt.html  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  quickstart.html  requirements.txt  search.html  searchindex.js  setup.py  test.py  tutorial.ipynb  wheel_tamer.sh
.github/workflows/: ci.yml  deploy.yml  os_test.yml
_modules/: index.html
_modules/gbrl/: ac_gbrl.html  gbt.html
_modules/gbrl/learners/: actor_critic_learner.html  base.html  gbt_learner.html  multi_gbt_learner.html
_modules/gbrl/models/: actor.html  actor_critic.html  base.html  critic.html  gbt.html
_sources/: examples.rst.txt  index.rst.txt  quickstart.rst.txt
_sources/actor_critic/: DiscreteCritic.rst.txt  GaussianActor.rst.txt  ParametricActor.rst.txt
_sources/learners/: base_learner.rst.txt  gbt_learner.rst.txt  index.rst.txt  multi_gbt_learner.rst.txt  separate_actor_critic_learner.rst.txt  shared_actor_critic_learner.rst.txt
_sources/models/: actor_critic.rst.txt  base_gbt.rst.txt  continuous_critic.rst.txt  discrete_critic.rst.txt  gaussian_actor.rst.txt  gbt.rst.txt  index.rst.txt  parametric_actor.rst.txt
actor_critic/: ActorCritic.html  ContinuousCritic.html  DiscreteCritic.html  GaussianActor.html  ParametricActor.html  index.html
docs/: conf.py  examples.rst  gbt.rst  index.rst  modules.rst  quickstart.rst
docs/actor_critic/: ActorCritic.rst  ContinuousCritic.rst  index.rst
docs/examples/: index.rst
gbrl/: .nfs0000000009d511560013171b  __init__.py  ac_gbrl.py  compression.py  config.py  constraints.py  gbrl_wrapper.py  gbt.py  utils.py
gbrl/common/: __init__.py  config.py  utils.py
gbrl/include/libomp/: libomp.dylib
gbrl/learners/: __init__.py  actor_critic_learner.py  base.py  cost_actor_critic_learner.py  gbt_learner.py  multi_gbt_learner.py
gbrl/models/: __init__.py  actor.py  actor_critic.py  base.py  critic.py  gbt.py
gbrl/src/cpp/: CMakeLists.txt  binding.cpp  compression.cpp  compression.h  config.h  data_structs.cpp  data_structs.h  feature_constraints.cpp  feature_constraints.h  fitter.cpp  fitter.h  gbrl.cpp  gbrl.h  gbrl_binding.cpp  loss.cpp  loss.h  main.cpp  math_ops.cpp  math_ops.h  node.cpp  node.h  optimizer.cpp  optimizer.h  predictor.cpp  predictor.h  scheduler.cpp  scheduler.h  shap.cpp  shap.h  split_candidate_generator.cpp  split_candidate_generator.h  types.cpp  types.h  utils.cpp  utils.h
gbrl/src/cuda/: CMakeLists.txt  cuda_compression.cu  cuda_compression.h  cuda_feature_constraints.cu  cuda_feature_constraints.h  cuda_fitter.cu  cuda_fitter.h  cuda_loss.cu  cuda_loss.h  cuda_predictor.cu  cuda_predictor.h  cuda_preprocess.cu  cuda_preprocess.h  cuda_types.cu  cuda_types.h  cuda_utils.cu  cuda_utils.h
learners/: base_learner.html  gbt_learner.html  index.html  multi_gbt_learner.html  separate_actor_critic_learner.html  shared_actor_critic_learner.html
models/: actor_critic.html  base_gbt.html  continuous_critic.html  discrete_critic.html  gaussian_actor.html  gbt.html  index.html  parametric_actor.html
tests/: __init__.py  test_dimension_handling.py  test_gbt_constraints.py  test_gbt_multi.py  test_gbt_single.py  test_multi_gbt_learner.py
