[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "cmake>=3.18",
    "pybind11[global]==2.13.1"
]

build-backend = "setuptools.build_meta"

[project]
name = "gbrl"
version = "1.0.0"
description = "Gradient Boosted Trees for RL"
readme = { file = "README.md", content-type = "text/markdown" }
authors = [
    {name = "Benjamin Fuhrer", email = "bfuhrer@nvidia.com"},
    {name = "Chen Tessler", email = "ctessler@nvidia.com"},
    {name = "Gal Dalal", email = "galal@nvidia.com"}
]
dependencies = [
    "pybind11[global]==2.13.1",
    "numpy",
    "cmake>=3.18",
    "torch",
    "scikit_learn==1.2.2",
    "scipy",
    "shap",
    "matplotlib",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

requires-python = ">=3.7"

