[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "cmake>=3.18",
    "pybind11[global]==2.13.1"
]

build-backend = "setuptools.build_meta"

[project]
name = "gbrl"
version = "1.0.2"
description = "Gradient Boosted Trees for RL"
readme = { file = "README.md", content-type = "text/markdown" }
authors = [
    {name = "Benjamin Fuhrer", email = "bfuhrer@nvidia.com"},
    {name = "Chen Tessler", email = "ctessler@nvidia.com"},
    {name = "Gal Dalal", email = "galal@nvidia.com"}
]
dependencies = [
    "pybind11[global]==2.13.1",
    "numpy>=1.21.0",
    "cmake>=3.18",
    "torch>=1.10.0",
    "scikit-learn>=1.5.0",
    "scipy>=1.7.0",
    "shap>=0.40.0",
    "matplotlib>=3.5.0",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

requires-python = ">=3.9"

[tool.poetry]
name = "gbrl"
version = "1.0.2"
description = "Gradient Boosted Trees for RL"
authors = ["Benjamin Fuhrer <bfuhrer@nvidia.com>", "Chen Tessler <ctessler@nvidia.com>", "Gal Dalal <galal@nvidia.com>"]
readme = "README.md"
packages = [{include = "gbrl"}]

[tool.poetry.dependencies]
python = ">=3.9"
pybind11 = {version = "2.13.1", extras = ["global"]}
numpy = ">=1.21.0"
cmake = ">=3.18"
torch = ">=1.10.0"
scikit-learn = ">=1.5.0"
scipy = ">=1.7.0"
shap = ">=0.40.0"
matplotlib = ">=3.5.0"

[tool.poetry.dev-dependencies]
pytest = "*"

